Added flying library logo.

--- a/library3000-ui/src/main/webapp/WEB-INF/styles/library3000.css
+++ b/library3000-ui/src/main/webapp/WEB-INF/styles/library3000.css
@@ -1,3 +1,16 @@
-.foo {
+#clickArea, #logo {
+    background: #ffffff;
+    padding: 20px;
+    text-align: center;
+    width: 435px;
+    display: block;
+    font-family: 'Trebuchet MS', Verdana, Helvetica, Arial, sans-serif;
+    color: #000;
+    border: 2px solid;
+    border-color:  #444 #444 #444 #444;
+}
+
+#logo {
+    border-width: 0px 2px 2px 2px;
     display: none;
 }
