Added space invader and some changes in logo.

--- a/library3000-ui/src/main/webapp/WEB-INF/styles/library3000.css
+++ b/library3000-ui/src/main/webapp/WEB-INF/styles/library3000.css
@@ -2,7 +2,7 @@
     background: #ffffff;
     padding: 20px;
     text-align: center;
-    width: 435px;
+    width: 275px;
     display: block;
     font-family: 'Trebuchet MS', Verdana, Helvetica, Arial, sans-serif;
     color: #000;
@@ -13,4 +13,17 @@
 #logo {
     border-width: 0px 2px 2px 2px;
     display: none;
+}
+
+#clickArea {
+    cursor: pointer;
+}
+
+#space-invader {
+    box-shadow: 0 0 0 1em red, 0 1em 0 1em red, -2.5em 1.5em 0 .5em red, 2.5em 1.5em 0 .5em red, -3em -3em 0 0 red, 3em -3em 0 0 red, -2em -2em 0 0 red, 2em -2em 0 0 red, -3em -1em 0 0 red, -2em -1em 0 0 red, 2em -1em 0 0 red, 3em -1em 0 0 red, -4em 0 0 0 red, -3em 0 0 0 red, 3em 0 0 0 red, 4em 0 0 0 red, -5em 1em 0 0 red, -4em 1em 0 0 red, 4em 1em 0 0 red, 5em 1em 0 0 red, -5em 2em 0 0 red, 5em 2em 0 0 red, -5em 3em 0 0 red, -3em 3em 0 0 red, 3em 3em 0 0 red, 5em 3em 0 0 red, -2em 4em 0 0 red, -1em 4em 0 0 red, 1em 4em 0 0 red, 2em 4em 0 0 red;
+    background: red;
+    width: 1em;
+    height: 1em;
+    overflow: hidden;
+    margin: 50px 0 70px 65px;
 }
