--- a/library3000-ui/src/main/webapp/WEB-INF/styles/library3000.css
+++ b/library3000-ui/src/main/webapp/WEB-INF/styles/library3000.css
@@ -27,3 +27,9 @@
     overflow: hidden;
     margin: 50px 0 70px 65px;
 }
+
+.libraryGrid {
+    border: 1px solid rgb(212,212,212);
+    width: 900px;
+    height: 300px
+}
